make prompt display more useful git info

--- a/omp/theme.omp.toml
+++ b/omp/theme.omp.toml
@@ -11,29 +11,31 @@ version = 3
   alignment = 'left'
 
   [[blocks.segments]]
-    template = ' {{ .UserName }} on'
+    template = ' {{ .UserName }} '
     foreground = '#45F1C2'
     type = 'session'
     style = 'plain'
 
   [[blocks.segments]]
-    template = '  {{ .Path }} '
+    template = ' {{ .Path }} '
     foreground = '#0CA0D8'
     type = 'path'
     style = 'plain'
 
     [blocks.segments.properties]
       folder_separator_icon = '/'
-      style = 'full'
+      style = 'agnoster_short'
+      max_depth = 4
 
   [[blocks.segments]]
-    template = '{{ .UpstreamIcon }}{{ .HEAD }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }} '
+    template = '{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }} '
     foreground = '#14A5AE'
     powerline_symbol = ''
     type = 'git'
     style = 'plain'
 
     [blocks.segments.properties]
+      fetch_status = true
       fetch_upstream_icon = true
 
   [[blocks.segments]]
